--- a/formacao-academica.html
+++ b/formacao-academica.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formação Acadêmica - CV - Tatiana Weska</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/> <!-- link de chamada do CSS -->
+    <link rel="stylesheet" type="text/css" href="./css/estilo.css"/> <!-- link de chamada do CSS -->
 </head>
 <body>
     <div id="interface"> <!-- div principal comum a todas as páginas do CV -->
@@ -15,7 +15,7 @@
             </hgroup>
 
             <figure class="foto-diploma"> <!-- ícone de diploma -->
-                <img id="img-diploma" src="_imagens/diploma.png"/>
+                <img id="img-diploma" src="./imagens/diploma.png"/>
             </figure>
         </header>
 
